week1 vedio updata

--- a/content/Week1~Week5.html
+++ b/content/Week1~Week5.html
@@ -140,7 +140,12 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Week1~Week5</h1>
-<p></p><br />About << <a href='About.html'>Previous</a> </div>
+<p><strong>Week1</strong></p>
+<p>設定倉儲</p>
+<p>1.先設定SSH</p>
+<p>2.下載倉儲</p>
+<p>3.將cmsimde載下來開始設定網站</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/n2QqyY27J9g" width="560"></iframe></p><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
