--- a/content/index.html
+++ b/content/index.html
@@ -139,7 +139,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Week1~Week5.html'>Next</a> >> Week1~Week5<br /><h1>About</h1>
-<p>cmsimde_site</p>
+<p>網際內容管理</p>
+<p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
+<p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
+<p></p>
 <br /> <a href='Week1~Week5.html'>Next</a> >> Week1~Week5</div>
         
     <!-- footer -->
