--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,12 @@
 <h1>About</h1>
-<p>cmsimde_site</p>
-<h1>Week1~Week5</h1>
+<p>網際內容管理</p>
+<p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
+<p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
 <p></p>
+<h1>Week1~Week5</h1>
+<p><strong>Week1</strong></p>
+<p>設定倉儲</p>
+<p>1.先設定SSH</p>
+<p>2.下載倉儲</p>
+<p>3.將cmsimde載下來開始設定網站</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/n2QqyY27J9g" width="560"></iframe></p>
