--- a/content/Week1~Week5.html
+++ b/content/Week1~Week5.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Week1~Week5</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week1~Week5</h1>
 <p><strong>Week1</strong></p>
 <p>設定倉儲</p>
 <p>1.先設定SSH</p>
@@ -169,7 +169,8 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p></p><br />About << <a href='About.html'>Previous</a> </div>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
         
     <!-- footer -->
       <div class="container">
