--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -10,7 +10,7 @@
 <p>2.下載倉儲</p>
 <p>3.將cmsimde載下來開始設定網站</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/n2QqyY27J9g" width="560"></iframe></p>
-<p>ssh格式不支援</p>
+<p><strong>ssh格式不支援</strong></p>
 <p><strong><img alt="" height="131" src="/images/4.18.png" width="1000"/></strong></p>
 <p>後面上傳遇到了這個問題，上面寫著這個格式的加密不夠長，需要變換，我改用ECDSA的加密。</p>
 <p>在創建SSHkey的時候改用這個指令</p>
@@ -34,3 +34,21 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p></p>
+<h1>midterm</h1>
+<p><!--配合 Wink 檔案將 js 檔案設定如下--></p>
+<script>
+var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, buttonFrameOffset: 2, frameStops: { }, };
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="/downloads/w8_project.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
