--- a/content/About.html
+++ b/content/About.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
