--- a/content/Week1~Week8.html
+++ b/content/Week1~Week8.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week18.html'>Week9~Week18</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week1~Week5</h1>
+    <div id="tipue_search_content">Progress << <a href='Progress.html'>Previous</a> <a href='Week9~Week18.html'>Next</a> >> Week9~Week18<br /><h1>Week1~Week8</h1>
 <p><strong>Week1</strong></p>
 <p>設定倉儲</p>
 <p>1.先設定SSH</p>
@@ -170,7 +170,7 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+<br />Progress << <a href='Progress.html'>Previous</a> <a href='Week9~Week18.html'>Next</a> >> Week9~Week18</div>
         
     <!-- footer -->
       <div class="container">
