--- a/content/Week9~Week18.html
+++ b/content/Week9~Week18.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,12 +139,32 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Progress.html'>Next</a> >> Progress<br /><h1>About</h1>
-<p>網際內容管理</p>
-<p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
-<p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
-<p></p>
-<br /> <a href='Progress.html'>Next</a> >> Progress</div>
+    <div id="tipue_search_content">Week1~Week8 << <a href='Week1~Week8.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week9~Week18</h1>
+<p>利用指定的IP開啟nginx</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="./../downloads/5.16.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p></p><br />Week1~Week8 << <a href='Week1~Week8.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
         
     <!-- footer -->
       <div class="container">
