--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,7 +3,8 @@
 <p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
 <p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
 <p></p>
-<h1>Week1~Week5</h1>
+<h1>Progress</h1>
+<h2>Week1~Week8</h2>
 <p><strong>Week1</strong></p>
 <p>設定倉儲</p>
 <p>1.先設定SSH</p>
@@ -34,14 +35,10 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p></p>
-<h1>midterm</h1>
-<p><!--配合 Wink 檔案將 js 檔案設定如下--></p>
-<script>
-var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, buttonFrameOffset: 2, frameStops: { }, };
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w8_project.mp4" type="video/mp4"/></video>
+<h2>Week9~Week18</h2><h1>midterm</h1>
+<p><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="/downloads/w8_project.mp4" type="video/mp4"/></video></p>
+<div class="winkVideoContainerClass">
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
