--- a/content/Progress.html
+++ b/content/Progress.html
@@ -139,12 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Progress.html'>Next</a> >> Progress<br /><h1>About</h1>
-<p>網際內容管理</p>
-<p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
-<p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
-<p></p>
-<br /> <a href='Progress.html'>Next</a> >> Progress</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1~Week8.html'>Next</a> >> Week1~Week8<br /><h1>Progress</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='Week1~Week8.html'>Next</a> >> Week1~Week8</div>
         
     <!-- footer -->
       <div class="container">
