--- a/content/index.html
+++ b/content/index.html
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week18.html'>Week9~Week18</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -138,12 +138,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Week1~Week5.html'>Next</a> >> Week1~Week5<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='Progress.html'>Next</a> >> Progress<br /><h1>About</h1>
 <p>網際內容管理</p>
 <p>個人網站:<a href="https://s40723207.github.io/wcm2022/content/index.html">cmsimde_site (s40723207.github.io)</a></p>
 <p><span>個人倉儲:<a href="https://github.com/s40723207/wcm2022">s40723207/wcm2022 (github.com)</a></span></p>
 <p></p>
-<br /> <a href='Week1~Week5.html'>Next</a> >> Week1~Week5</div>
+<br /> <a href='Progress.html'>Next</a> >> Progress</div>
         
     <!-- footer -->
       <div class="container">
