--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -126,7 +126,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week18.html'>Week9~Week18</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,4 +137,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Week1~Week5.html'>Week1~Week5</a><li><a href='midterm.html'>midterm</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Progress.html'>Progress</a><ul><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week18.html'>Week9~Week18</a></li></ul><li><a href='midterm.html'>midterm</a></li></ul></section></div></body></html>
