--- a/content/midterm.html
+++ b/content/midterm.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='tetris.html'>tetris</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='tetris.html'>tetris</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week13 << <a href='Week13.html'>Previous</a> <a href='tetris.html'>Next</a> >> tetris<br /><h1>midterm</h1>
+    <div id="tipue_search_content">Week14 << <a href='Week14.html'>Previous</a> <a href='tetris.html'>Next</a> >> tetris<br /><h1>midterm</h1>
 <p><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/w8_project.mp4" type="video/mp4"/></video></p>
 <div class="winkVideoContainerClass">
@@ -153,7 +153,7 @@ img.add_border {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<br />Week13 << <a href='Week13.html'>Previous</a> <a href='tetris.html'>Next</a> >> tetris</div>
+<br />Week14 << <a href='Week14.html'>Previous</a> <a href='tetris.html'>Next</a> >> tetris</div>
         
     <!-- footer -->
       <div class="container">
