--- a/content/tetris.html
+++ b/content/tetris.html
@@ -369,7 +369,16 @@ def do_game():
                     ctx.fillStyle = '#%02x%02x%02x' % colors[game.figure.color]
                     ctx.fillRect(game.x + game.zoom * (j + game.figure.x) + 1,
                                       game.y + game.zoom * (i + game.figure.y) + 1,
-                                      game.zoom - 2, game.zoom - 2)
+                                      game.zoom - 2, game.zoom -2)
+    ctx.font = '40px serif'
+    ctx.fillStyle = BLACK
+    ctx.fillText('Score:'+ str(game.score), 100,50)
+    int = 1
+    if game.score >= int:
+        ctx.fillStyle = WHITE
+        ctx.fillRect( 200, 0, 300, 50)
+        ctx.fillStyle = BLACK
+        ctx.fillText(str(game.score), 200,50)
 
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
