--- a/content/tetris.html
+++ b/content/tetris.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='tetris.html'>tetris</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,14 +139,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">midterm << <a href='midterm.html'>Previous</a> <br /><h1>tetris</h1>
-<!-- 導入 brython程式庫 -->
+    <div id="tipue_search_content">midterm << <a href='midterm.html'>Previous</a> <a href='report.html'>Next</a> >> report<br /><h1>tetris</h1>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 <script>
 window.onload=function(){brython();}
 </script>
-<p>assignment </p>
 <script type="text/python3">
 # from https://levelup.gitconnected.com/writing-tetris-in-python-2a16bddb5318
 # 暫時關閉 system proxy 設定後,  pip install pygame
@@ -370,22 +368,21 @@ def do_game():
                     ctx.fillRect(game.x + game.zoom * (j + game.figure.x) + 1,
                                       game.y + game.zoom * (i + game.figure.y) + 1,
                                       game.zoom - 2, game.zoom -2)
-    ctx.font = '40px serif'
+    ctx.font = '40px Arial'
     ctx.fillStyle = BLACK
-    ctx.fillText('Score:'+ str(game.score), 100,50)
+    ctx.fillText('Score:'+ str(game.score), 140,50)
     int = 1
     if game.score >= int:
         ctx.fillStyle = WHITE
-        ctx.fillRect( 200, 0, 300, 50)
+        ctx.fillRect( 250, 0, 300, 50)
         ctx.fillStyle = BLACK
-        ctx.fillText(str(game.score), 200,50)
+        ctx.fillText(str(game.score), 250,50)
 
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
 </script>
-<div id="brython_div"></div>
-<p></p><br />midterm << <a href='midterm.html'>Previous</a> </div>
+<div id="brython_div"></div><br />midterm << <a href='midterm.html'>Previous</a> <a href='report.html'>Next</a> >> report</div>
         
     <!-- footer -->
       <div class="container">
