--- a/config/content.htm
+++ b/config/content.htm
@@ -16,7 +16,13 @@
 <p>後面上傳遇到了這個問題，上面寫著這個格式的加密不夠長，需要變換，我改用ECDSA的加密。</p>
 <p>在創建SSHkey的時候改用這個指令</p>
 <p><strong>ssh-keygen -t ecdsa -b 521 -C "your_email@example.com"</strong></p>
-<p><strong>架設Nginx伺服器</strong></p>
+<p><strong>Week2</strong></p>
+<p>介紹了wink程式，並回去自己練習使用。</p>
+<p>如何將wink堪入頁面</p>
+<p></p>
+<p><strong><img alt="" height="373" src="/images/wink.png" width="533"/></strong></p>
+<p><b>Week7</b></p>
+<p>架設Nginx伺服器，練習修改nginx的conf。</p>
 <p><!--配合 Wink 檔案將 js 檔案設定如下--></p>
 <script>
 var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, buttonFrameOffset: 2, frameStops: { }, };
@@ -24,18 +30,21 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="/downloads/4.17.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoOverlayClass"><br/><button class="winkVideoControlBarPlayButtonClass"></button>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"><strong></strong></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"><strong></strong></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"><strong></strong></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"><strong></strong></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"><strong></strong></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p></p>
-<h2>Week9~Week12</h2>
+<p><strong>Week8</strong></p>
+<p>練習使用blog</p>
+<p><img alt="" height="472" src="/images/blog.png" width="1349"/></p><h2>Week9~Week12</h2>
+<p><strong>week10</strong></p>
 <p>利用指定的IP開啟nginx</p>
 <script>
 var winkVideoData = {
@@ -60,8 +69,8 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p></p>
-<h2>Week13</h2>
+<p><strong>Week12</strong></p>
+<p>使用學校後排不會被重製的電腦當作伺服器，並設定指定的IP。</p><h2>Week13</h2>
 <!-- 導入 brython程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
