--- a/content/Week9~Week12.html
+++ b/content/Week9~Week12.html
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week1~Week8 << <a href='Week1~Week8.html'>Previous</a> <a href='Week13.html'>Next</a> >> Week13<br /><h1>Week9~Week12</h1>
+<p><strong>week10</strong></p>
 <p>利用指定的IP開啟nginx</p>
 <script>
 var winkVideoData = {
@@ -164,8 +165,8 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p></p>
-<br />Week1~Week8 << <a href='Week1~Week8.html'>Previous</a> <a href='Week13.html'>Next</a> >> Week13</div>
+<p><strong>Week12</strong></p>
+<p>使用學校後排不會被重製的電腦當作伺服器，並設定指定的IP。</p><br />Week1~Week8 << <a href='Week1~Week8.html'>Previous</a> <a href='Week13.html'>Next</a> >> Week13</div>
         
     <!-- footer -->
       <div class="container">
