--- a/config/content.htm
+++ b/config/content.htm
@@ -71,6 +71,7 @@ var winkVideoData = {
 </div>
 <p><strong>Week12</strong></p>
 <p>使用學校後排不會被重製的電腦當作伺服器，並設定指定的IP。</p><h2>Week13</h2>
+<p><a href="/downloads/如何在網站上使用brython.pdf">在網站上加入brython</a>，讓方塊動起來。</p>
 <!-- 導入 brython程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -249,8 +250,8 @@ for i in range(5):
 browser.timer.set_interval(game, 100)
 </script>
 <div id="brython_div"></div>
-<p></p>
-<h2>Week14</h2>
+<p></p><h2>Week14</h2>
+<p>把程式存入glist，讀取舊資料，刪除沒有註冊的人。</p>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
@@ -644,3 +645,5 @@ browser.timer.set_interval(do_game, fps)
 <p><a href="/downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
 <p><a href="/downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
 <p><a href="/downloads/如何在網站上使用brython.pdf"></a></p>
+<h1>final</h1>
+<p><a href="/downloads/finalproject.pdf">finalproject.pdf</a></p>
