--- a/content/Week13.html
+++ b/content/Week13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week9~Week12 << <a href='Week9~Week12.html'>Previous</a> <a href='Week14.html'>Next</a> >> Week14<br /><h1>Week13</h1>
+<p><a href="./../downloads/如何在網站上使用brython.pdf">在網站上加入brython</a>，讓方塊動起來。</p>
 <!-- 導入 brython程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -318,8 +319,7 @@ for i in range(5):
 browser.timer.set_interval(game, 100)
 </script>
 <div id="brython_div"></div>
-<p></p>
-<br />Week9~Week12 << <a href='Week9~Week12.html'>Previous</a> <a href='Week14.html'>Next</a> >> Week14</div>
+<p></p><br />Week9~Week12 << <a href='Week9~Week12.html'>Previous</a> <a href='Week14.html'>Next</a> >> Week14</div>
         
     <!-- footer -->
       <div class="container">
