--- a/content/Week14.html
+++ b/content/Week14.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week13 << <a href='Week13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week14</h1>
+<p>把程式存入glist，讀取舊資料，刪除沒有註冊的人。</p>
 <script src="./../cmsimde/static/brython.js">
 </script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
