--- a/content/report.html
+++ b/content/report.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,10 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">tetris << <a href='tetris.html'>Previous</a> <br /><h1>report</h1>
+    <div id="tipue_search_content">tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final<br /><h1>report</h1>
 <p><a href="./../downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
 <p><a href="./../downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><a href="./../downloads/如何在網站上使用brython.pdf"></a></p><br />tetris << <a href='tetris.html'>Previous</a> </div>
+<p><a href="./../downloads/如何在網站上使用brython.pdf"></a></p>
+<br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
         
     <!-- footer -->
       <div class="container">
