--- a/content/final.html
+++ b/content/final.html
@@ -140,7 +140,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">report << <a href='report.html'>Previous</a> <br /><h1>final</h1>
-<p><a href="./../downloads/finalproject.pdf">finalproject.pdf</a></p><br />report << <a href='report.html'>Previous</a> </div>
+<p><a href="./../downloads/finalproject.pdf">finalproject.pdf</a></p>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p><br />report << <a href='report.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
