--- a/config/content.htm
+++ b/config/content.htm
@@ -643,7 +643,8 @@ browser.timer.set_interval(do_game, fps)
 </script>
 <div id="brython_div"></div><h2>report</h2>
 <p><a href="/downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/%E5%A6%82%E4%BD%95%E5%9C%A8%E7%B6%B2%E7%AB%99%E4%B8%8A%E4%BD%BF%E7%94%A8brython.pdf" width="1000"></iframe></p>
 <p><a href="/downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><a href="/downloads/如何在網站上使用brython.pdf"></a></p>
-<h1>final</h1>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><h1>final</h1>
 <p><a href="/downloads/finalproject.pdf">finalproject.pdf</a></p>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p>
