--- a/content/report.html
+++ b/content/report.html
@@ -141,9 +141,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final<br /><h1>report</h1>
 <p><a href="./../downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/%E5%A6%82%E4%BD%95%E5%9C%A8%E7%B6%B2%E7%AB%99%E4%B8%8A%E4%BD%BF%E7%94%A8brython.pdf" width="1000"></iframe></p>
 <p><a href="./../downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><a href="./../downloads/如何在網站上使用brython.pdf"></a></p>
-<br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
         
     <!-- footer -->
       <div class="container">
