--- a/content/期末任務1.html
+++ b/content/期末任務1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week13 << <a href='Week13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week14</h1>
-<p>把程式存入glist，讀取舊資料，刪除沒有註冊的人。</p>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2<br /><h1>期末任務1</h1>
 <script src="./../cmsimde/static/brython.js">
 </script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -227,7 +226,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/s40723207/65599b84c4babcc3cb43df9a93972ab1/raw/68c3c8addb1d3f470f4055f2bcdde33a7e16b4f2/gistfile1.txt"
+        url = "https://gist.githubusercontent.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7/raw/e5e828c50c8ab610369f043c26b64445172fc178/tetris%2520W18-1"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -273,7 +272,31 @@ class button2:
         Ace2.editor.gotoLine(0)
         Ace2.run()
 </script>
-</p><br />Week13 << <a href='Week13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</p>
+<div id="brython_div"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="./../downloads/W18-1/W18-1.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
         
     <!-- footer -->
       <div class="container">
