--- a/content/期末任務2.html
+++ b/content/期末任務2.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week13 << <a href='Week13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>Week14</h1>
-<p>把程式存入glist，讀取舊資料，刪除沒有註冊的人。</p>
+    <div id="tipue_search_content">期末任務1 << <a href='期末任務1.html'>Previous</a> <br /><h1>期末任務2</h1>
 <script src="./../cmsimde/static/brython.js">
 </script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -273,7 +272,8 @@ class button2:
         Ace2.editor.gotoLine(0)
         Ace2.run()
 </script>
-</p><br />Week13 << <a href='Week13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</p>
+<div id="brython_div"></div><br />期末任務1 << <a href='期末任務1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
