--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -898,7 +898,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/s40723207/65599b84c4babcc3cb43df9a93972ab1/raw/68c3c8addb1d3f470f4055f2bcdde33a7e16b4f2/gistfile1.txt"
+        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/83169696f32626b0caadf880c89b483cb8624ca8/auto_tetris"
     prog = open(url).read()
 
     # 將程式載入編輯區
