--- a/config/content.htm
+++ b/config/content.htm
@@ -898,7 +898,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/s40723207/65599b84c4babcc3cb43df9a93972ab1/raw/68c3c8addb1d3f470f4055f2bcdde33a7e16b4f2/gistfile1.txt"
+        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/83169696f32626b0caadf880c89b483cb8624ca8/auto_tetris"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -946,3 +946,26 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="./../downloads/W18-2/W18-2.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
