gist link updata

--- a/config/content.htm
+++ b/config/content.htm
@@ -789,6 +789,7 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
+<p><a href="https://gist.github.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7">gist連結</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -802,11 +803,7 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/W18-1/W18-1.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoOverlayClass"><button class="winkVideoControlBarPlayButtonClass"></button>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
@@ -946,6 +943,8 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
+<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">gist連結</a></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -956,7 +955,7 @@ var winkVideoData = {
   },
 };
 </script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/W18-2/W18-2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
