repair task2 link

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -943,7 +943,7 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
-<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">gists連結</a></p>
+<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">gist連結</a></p>
 <p>
 <script>
 var winkVideoData = {
