--- a/content/期末任務2.html
+++ b/content/期末任務2.html
@@ -226,7 +226,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/83169696f32626b0caadf880c89b483cb8624ca8/auto_tetris"
+        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/452b8928c02b72816c7f6d3180cf6192b6679119/auto_tetris"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -274,6 +274,8 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
+<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">gist連結</a></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -284,7 +286,7 @@ var winkVideoData = {
   },
 };
 </script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/W18-2/W18-2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
