--- a/content/期末任務1.html
+++ b/content/期末任務1.html
@@ -274,6 +274,7 @@ class button2:
 </script>
 </p>
 <div id="brython_div"></div>
+<p><a href="https://gist.github.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7">gist連結</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -287,11 +288,7 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/W18-1/W18-1.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoOverlayClass"><button class="winkVideoControlBarPlayButtonClass"></button>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
