--- a/config/content.htm
+++ b/config/content.htm
@@ -654,7 +654,11 @@ browser.timer.set_interval(do_game, fps)
 <p>心得:</p>
 <p>　　一開始的<span>SSH</span>與<span>IP</span>的問題對於修過課的來講，已經是輕而易舉，然後後面學到的東西卻不然，<span>wink3</span>對於要在網站上教學十分好用，<span>nginx</span>在設定也十分有用，以往在傳東西給別人，要嘛拿<span>USB</span>慢慢拉，要嗎丟雲端，這個<span>nginx</span>十分好用；由於是大四才來修，也能看得出隨身系統的更新，變得比以前更好用。</p>
 <p></p>
-<h1>期末任務1</h1>
+<h1>期末任務</h1>
+<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%991.html">期末任務1</a></p>
+<p><a href="https://gist.github.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7">期末任務1gist</a></p>
+<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%992.html">期末任務2</a></p>
+<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">期末任務2gist</a></p><h1>期末任務1</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
