--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -654,7 +654,7 @@ browser.timer.set_interval(do_game, fps)
 <p>心得:</p>
 <p>　　一開始的<span>SSH</span>與<span>IP</span>的問題對於修過課的來講，已經是輕而易舉，然後後面學到的東西卻不然，<span>wink3</span>對於要在網站上教學十分好用，<span>nginx</span>在設定也十分有用，以往在傳東西給別人，要嘛拿<span>USB</span>慢慢拉，要嗎丟雲端，這個<span>nginx</span>十分好用；由於是大四才來修，也能看得出隨身系統的更新，變得比以前更好用。</p>
 <p></p>
-<h1>期末任務1</h1>
+<h1>期末任務</h1><h1>期末任務1</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
@@ -895,7 +895,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/83169696f32626b0caadf880c89b483cb8624ca8/auto_tetris"
+        url = "https://gist.githubusercontent.com/s40723207/4a0e750176c50526fbd81de7490063ba/raw/452b8928c02b72816c7f6d3180cf6192b6679119/auto_tetris"
     prog = open(url).read()
 
     # 將程式載入編輯區
