--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -126,7 +126,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務.html'>期末任務</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,4 +137,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Progress.html'>Progress</a><ul><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='tetris.html'>tetris</a><ul><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Progress.html'>Progress</a><ul><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='tetris.html'>tetris</a><ul><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務.html'>期末任務</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li></ul></section></div></body></html>
