--- a/content/期末任務1.html
+++ b/content/期末任務1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務.html'>期末任務</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2<br /><h1>期末任務1</h1>
+    <div id="tipue_search_content">期末任務 << <a href='期末任務.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2<br /><h1>期末任務1</h1>
 <script src="./../cmsimde/static/brython.js">
 </script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -293,7 +293,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
+</div>
+<p><strong>心得:</strong></p>
+<p>一開始想說去改程式裡的+ - 看可不可以實現由下至上,怎麼改都會出問題,後面想到用canvas翻轉的方式就變得很簡單。</p><br />期末任務 << <a href='期末任務.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
         
     <!-- footer -->
       <div class="container">
