--- a/content/期末任務2.html
+++ b/content/期末任務2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務.html'>期末任務</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -298,7 +298,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />期末任務1 << <a href='期末任務1.html'>Previous</a> </div>
+</div>
+<p><strong>心得:</strong></p>
+<p>期末任務一會做了之後,這個就變得比好做了,但是後面遇到了一個問題,這個分數也適用canvas做的,所以會被一起翻轉,後來看到別人用canvas翻轉文字做成特殊形狀的方式,想到把牠們分開,一開始想要只翻轉遊戲就好,但<span>restore放在哪都會出錯,就乾脆在翻轉一次後面的分數,再調整一下位子就好了.</span></p><br />期末任務1 << <a href='期末任務1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
