--- a/config/content.htm
+++ b/config/content.htm
@@ -812,7 +812,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>期末任務2</h1>
+</div>
+<p><strong>心得:</strong></p>
+<p>一開始想說去改程式裡的+ - 看可不可以實現由下至上,怎麼改都會出問題,後面想到用canvas翻轉的方式就變得很簡單。</p><h1>期末任務2</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
@@ -972,3 +974,5 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
+<p><strong>心得:</strong></p>
+<p>期末任務一會做了之後,這個就變得比好做了,但是後面遇到了一個問題,這個分數也適用canvas做的,所以會被一起翻轉,後來看到別人用canvas翻轉文字做成特殊形狀的方式,想到把牠們分開,一開始想要只翻轉遊戲就好,但<span>restore放在哪都會出錯,就乾脆在翻轉一次後面的分數,再調整一下位子就好了.</span></p>
