--- a/content/期末任務.html
+++ b/content/期末任務.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,11 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final<br /><h1>report</h1>
-<p><a href="./../downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
-<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/%E5%A6%82%E4%BD%95%E5%9C%A8%E7%B6%B2%E7%AB%99%E4%B8%8A%E4%BD%BF%E7%94%A8brython.pdf" width="1000"></iframe></p>
-<p><a href="./../downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='期末任務1.html'>Next</a> >> 期末任務1<br /><h1>期末任務</h1>
+<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%991.html">期末任務1</a></p>
+<p><a href="https://gist.github.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7">期末任務1gist</a></p>
+<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%992.html">期末任務2</a></p>
+<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">期末任務2gist</a></p><br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務1.html'>Next</a> >> 期末任務1</div>
         
     <!-- footer -->
       <div class="container">
